[Page] fix destructive secondary action not visible (#4647)
* fix destructive secondary action not visible

* change text color for destructive secondary action

* reset Playground.tsx

* destructure destructive, add hover state to destructive action & add a destructive example to readme

* update UNRELEASED.md

--- a/src/components/ActionMenu/components/SecondaryAction/SecondaryAction.scss
+++ b/src/components/ActionMenu/components/SecondaryAction/SecondaryAction.scss
@@ -27,4 +27,22 @@ $button-spacing: rem(12px);
       @include focus-ring($border-width: rem(0));
     }
   }
+
+  &.destructive {
+    a,
+    button {
+      @include recolor-icon(var(--p-icon-critical));
+      color: var(--p-interactive-critical);
+
+      // stylelint-disable-next-line selector-max-specificity
+      &:hover {
+        background-color: var(--p-surface-critical-subdued-hovered) !important;
+      }
+
+      // stylelint-disable selector-max-specificity
+      &:active {
+        background-color: var(--p-surface-critical-subdued-pressed) !important;
+      }
+    }
+  }
 }
